# karatev2

./: ARCHIVING_PATTERN_COMPARISON.md  AUTO_MATCHING_CHANGES_SUMMARY.md  AUTO_MATCHING_DETAILED_REVIEW.md  AUTO_MATCHING_ENHANCED.md  AUTO_MATCHING_QUICK_START.md  BASE_TEMPLATE_FIXES.md  BEFORE_AND_AFTER.md  BELT_PROMOTION_FLOW.md  BELT_PROMOTION_IMPLEMENTATION.md  BELT_PROMOTION_INDEX.md  BELT_PROMOTION_QUICK_START.md  BELT_PROMOTION_REFERENCE.md  BELT_PROMOTION_SEARCH_FIX.md  BELT_PROMOTION_SUMMARY.md  BELT_PROMOTION_TEMPLATE_ENHANCEMENTS.md  BELT_RANK_AND_LEADERBOARD_GUIDE.md  BELT_SCORING_ADMIN_GUIDE.md  BELT_SCORING_FINAL_GUIDE.md  BELT_SCORING_FORM_LAYOUT.md  BELT_SCORING_IMPLEMENTATION.md  BELT_SCORING_SUMMARY.md  BELT_SCORING_VERIFICATION_CHECKLIST.md  BUTTON_STYLING_UPDATE.md  COMPLETE_PROFILE_IMPLEMENTATION.txt  COMPLETION_REPORT.txt  COMPREHENSIVE_EVENT_EXPORT_GUIDE.md  COMPREHENSIVE_EVENT_EXPORT_SUMMARY.md  CURRENCY_CONVERSION_SUMMARY.md  DASHBOARD_INTEGRATION_COMPLETE.md  DELIVERABLES.txt  DELIVERY_SUMMARY.md  DETAILED_REPORT_WITH_TRAINEE_NAMES.md  DOCUMENTATION_INDEX.md  EVALUATION_ARCHITECTURE.md  EVALUATION_DEPLOYMENT_CHECKLIST.md  EVALUATION_FILES_MANIFEST.md  EVALUATION_IMPLEMENTATION.md  EVALUATION_IMPLEMENTATION_COMPLETE.md  EVALUATION_QUICK_REFERENCE.md  EVALUATION_QUICK_START.md  (+151 more)
core/: admin.py  apps.py  context_processors.py  decorators.py  forms.py  models.py  signals.py  urls.py
core/migrations/: 0001_initial.py  0002_judge_trainee.py  0005_payment.py  (+35 more)
karate/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  landing.html
(+121 files in other folders)
